# cargo-seek

./: .envrc  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
.config/: config.json5
.github/workflows/: cd.yml  ci.yml
docs/: demo.tape
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  errors.rs  http_client.rs  logging.rs  main.rs  project.rs  tui.rs  util.rs
src/cargo/: cargo_env.rs  cargo_manager.rs  error.rs  metadata.rs  mod.rs  project.rs
src/cargo/api/: installed_binary.rs  manifest_metadata.rs  mod.rs
src/components/: app_id.rs  button.rs  fps.rs  home.rs  mod.rs  settings.rs  status_bar.rs
src/components/home/: action_handler.rs  cargo_request.rs  draw.rs  enums.rs  feature_selector.rs  focusable.rs  key_handler.rs  mod.rs  overlay.rs  scope_dropdown.rs  search_results.rs  search_sort_dropdown.rs  sort_dropdown.rs  types.rs
src/components/ux/: button.rs  confirm.rs  dropdown.rs  mod.rs  multi_select.rs  popup.rs
src/models/: cargo_crate.rs  installed_binary.rs  manifest_metadata.rs  mod.rs  project.rs
src/search/: action.rs  cargo_crate.rs  crate_search_manager.rs  mod.rs  search_options.rs  search_results.rs
src/services/: crate_search_manager.rs  mod.rs
