[package]
name = "cargo-seek"
version = "0.1.0"
edition = "2021"
description = "A terminal user interface for searching, adding and installing cargo crates"
authors = ["Tareq Imbasher <https://github.com/tareqimbasher"]
build = "build.rs"
repository = "https://github.com/tareqimbasher/cargo-seek"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1"
better-panic = "0.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.15"
crates_io_api = "0.11.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0"
futures = "0.3.30"
human-panic = "2.0.1"
indexmap = "2.8.0"
json5 = "0.4.1"
num-format = "0.4.4"
open = "5.3.0"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
ratatui = { version = "0.28.1", features = ["serde", "macros"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
sys-locale = "0.3.1"
tempfile = "3.12.0"
thiserror = "1.0.64"
throbber-widgets-tui = "0.7"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-input = "0.10.1"

[build-dependencies]
anyhow = "1.0.86"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }
